# factorio-ai-tools

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  analyze_chunks.py  compose.yml  forum_links.txt  forum_post.txt  ingest_clusterio.py  ingest_factorio.py  ingest_forum.py  ingest_github_mod.py  ingest_wiki.py  inspect_tables.py  make.bat  pyproject.toml  requirements.txt  server.py  smithery.yaml  start_mcp_server.bat
.agents/: AGENTS.md
.github/: release-drafter.yml
.github/workflows/: docker-publish.yml  publish-databases.yml  pypi-publish.yml  release-drafter.yml  tests.yml
clusterio_lancedb/__manifest/_transactions/: 0-9b912e44-675c-412c-bf5b-cbfb580a145d.txn
clusterio_lancedb/codebase.lance/_transactions/: 0-2b881f00-2b99-4876-b06c-0d0d3c6167f2.txn  0-4eb57f08-e413-402c-bb22-71f8eccc1853.txn  1-38e0b85a-e91b-425a-af6c-350400a8112e.txn  10-b48a0c5a-df0d-4181-9ff7-b38d1e00691e.txn  100-9a0930a7-53cf-4233-b991-6540da0be24b.txn  101-7b2a80c5-a2b0-4d7b-8052-8fc349e46033.txn  102-0cf9f034-8acf-488d-b45c-13ace9abba57.txn  103-16b6eb6f-35cf-4828-b0ab-afd08d2f61d7.txn  104-8c0c0076-853b-4dd2-83f1-50a8eee14aac.txn  105-e228dafc-0f02-4c60-bcc9-8ccf96a42bea.txn  106-1c7171ac-da4e-4d86-a5ea-425141f58f3b.txn  107-dd24f1d5-f7d4-441a-b6a0-5ec9ea9d64ae.txn  108-e3ccc289-24bd-4866-9ee6-eb4bcff2ec99.txn  109-8f977ce6-1f0f-4985-9a20-4ad7918d8984.txn  11-bedddb5c-7264-4561-8160-589e5bd8eec6.txn  110-86983656-6e13-4ee2-93a9-1c0a7edc1e10.txn  111-a468f815-ba94-4472-bda7-2bb45c08c1bc.txn  112-94ecf749-8224-4611-9460-af00059a6134.txn  113-750d7cf7-3baa-4d3a-9537-c61e6fe9d347.txn  114-233c18e3-4c4b-4bc5-80e7-13e43962064f.txn  115-b14c5d36-507c-4085-9a13-c5cbadd8e23d.txn  (+166 more)
data/factorio_lancedb/: version.txt
docs/: README.md  architecture.md  rag-pipeline-playbook.md  serving.md  stores.md  tools.md
factorio-export/: README.md
ingest/: ingest_clusterio.py  ingest_factorio.py  ingest_forum.py  ingest_github_mod.py  ingest_wiki.py
maintenance/: compact_lancedb.py  dump_data.py  eval_retrieval.py  smoke_release.py  store_status.py
maintenance/hooks/: pre-push
src/factorio_ai_tools/: __init__.py  server.py
tests/: conftest.py  test_chunk_auditor.py  test_common.py  test_gitignore_clone_dirs.py  test_gpu_torch.py  test_ingest_clusterio.py  test_ingest_factorio.py  test_ingest_forum_wiki.py  test_ingest_github_repo.py  test_ingest_prototypes.py  test_pipeline_invariants.py  test_server_contract.py
tests/fixtures/: forum_topic.html  prototype_api.json  runtime_api.json
tests/golden/: queries.yaml
(+775 files in other folders)
