[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "factorio-ai-tools"
version = "0.1.0"
authors = [
  { name="Solar" }
]
description = "A lightning-fast, hybrid-search Vector Database and Model Context Protocol (MCP) server for Factorio modding."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.1.2",
    "lancedb>=0.17.0",
    "beautifulsoup4>=4.12.0",
    "pyarrow>=15.0.0",
    "requests>=2.31.0",
    "hf-transfer>=0.1.0",
    "tree-sitter-lua>=0.2.0"
]

[project.scripts]
factorio-ai-tools = "server:main"

[tool.setuptools]
py-modules = ["server", "ingest_clusterio", "ingest_factorio", "ingest_forum", "ingest_github_mod", "ingest_wiki"]
