[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "factorio-ai-tools"
dynamic = ["version"]
authors = [
  { name="solarcloud7" }
]
description = "A lightning-fast, hybrid-search Vector Database and Model Context Protocol (MCP) server for Factorio modding."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.1.2",
    "lancedb>=0.17.0",
    "beautifulsoup4>=4.12.0",
    "pyarrow>=15.0.0",
    "requests>=2.31.0",
    "hf-transfer>=0.1.0",
    "tree-sitter==0.25.2",
    "tree-sitter-typescript==0.23.2",
    "tree-sitter-lua>=0.5.0",
    "torch>=2.12.1",
    "sentence-transformers>=5.6.0",
    "luaparser>=4.0.0",
]

[project.scripts]
factorio-ai-tools = "factorio_ai_tools.server:main"

[dependency-groups]
dev = ["pytest>=8", "pytest-mock"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
